# multiqueue

./: CMakeLists.txt  MultiQueueProcessor.h  README.md  concurrency-consumer.h  concurrency-map.h  concurrency-queue.h
tests/: CMakeLists.txt  main.cpp
tests/units/: gtest-map.h  gtest-processor.h  gtest-queue.h
